[project]
name = "dreamstate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clear>=2.0.0",
    "inquirer>=3.4.1",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "typer>=0.19.2",
]


[project.scripts]

ds = "dreamstate.cli:ds"
